# hs-nipkow-lics93

./: .gitignore  LICENSE  README.md  nipkow93.cabal  stack.yaml
src/: Main.hs  SmplSyntax.hs  SmplUnif.hs  Syntax.hs  Unif.hs
