name: nipkow93
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Ki Yung Ahn
maintainer: example@example.com
homepage: https://github.com/kyagrd/hs-nipkow-lics93#readme
category: Web
author: Ki Yung Ahn
extra-source-files:
    README.md

executable nipkow93
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        containers -any,
        unbound -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Syntax
        Unif
